# inventory_transhipment_problem

./: README.md  pyproject.toml
app/: preprocess.py  process.py
app/src/: api_clients.py  classes.py  container.py  db_connector.py  loggin.py  ramdom_variates_generator.py  simulator.py  solver.py
app/src/.ipynb_checkpoints/: Data Gathering-checkpoint.ipynb
notebooks/: optimus_data_computing.ipynb
